--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t fbruton/react-test -f ./client/Dockerfile.dev
+  - docker build -t fbruton/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true fbruton/react-test npm test
