--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
   - docker build -t fbruton/multi-server ./server
   - docker build -t fbruton/multi-worker ./worker
   # Login to docker CLI
-  - echo $DOCKER_PASSWORD | docker login -u "DOCKER_ID" --password-stdin
+  - echo $DOCKER_PASSWORD | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push to docker hub
   - docker push fbruton/multi-client
   - docker push fbruton/multi-nginx
